feat: provide sensible defaults for jvm options